--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
                 a rapid transit network model. It calculates the optimal path from the origin to every pixel on screen.
             </p>
             <div class="mt-3">
+                <!-- City Selector -->
+                <div class="mb-2">
+                    <label class="text-xs font-medium text-gray-700 block mb-1">Select City</label>
+                    <select id="city-select"
+                        class="w-full bg-white border border-gray-300 text-gray-700 text-xs rounded px-2 py-2 focus:outline-none focus:ring-1 focus:ring-blue-500">
+                        <option value="nyc">New York City (MTA)</option>
+                        <option value="sf">San Francisco (BART)</option>
+                        <option value="boston">Boston (MBTA)</option>
+                        <option value="chicago">Chicago (CTA)</option>
+                        <option value="other">Other (Global - Less Accurate)</option>
+                    </select>
+                </div>
+
                 <button id="fetch-stations-btn"
                     class="w-full bg-blue-600 hover:bg-blue-700 text-white text-xs font-bold py-2 px-4 rounded transition-colors flex items-center justify-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24"
@@ -135,7 +148,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15" />
                     </svg>
-                    Load Transit Stations for Area
+                    Load Transit Network
                 </button>
                 <p id="station-count" class="text-[10px] text-gray-400 mt-1 text-center hidden">Loaded 0 stations</p>
             </div>
@@ -252,35 +265,71 @@
             initDataFetching();
         }
 
-        // --- 3.2 DATA FETCHING (OVERPASS API) ---
+        // --- 3.2 DATA FETCHING (STATIC GRAPH) ---
+        const CITIES = {
+            'nyc': { center: [40.7527, -73.9772], zoom: 13, file: 'transit_data/nyc.json' },
+            'sf': { center: [37.7749, -122.4194], zoom: 12, file: 'transit_data/sf.json' },
+            'boston': { center: [42.3601, -71.0589], zoom: 13, file: 'transit_data/boston.json' },
+            'chicago': { center: [41.8781, -87.6298], zoom: 12, file: 'transit_data/chicago.json' },
+            'other': { center: null, zoom: null, file: null }
+        };
+
         function initDataFetching() {
             const btn = document.getElementById('fetch-stations-btn');
             const countLabel = document.getElementById('station-count');
             const loading = document.getElementById('loading-overlay');
+            const citySelect = document.getElementById('city-select');
+
+            // Handle City Change
+            citySelect.addEventListener('change', (e) => {
+                const cityKey = e.target.value;
+                const city = CITIES[cityKey];
+                if (city) {
+                    // Move map if center is defined
+                    if (city.center) {
+                        origin = city.center;
+                        map.setView(origin, city.zoom);
+                        if (window.updateOrigin) {
+                            window.updateOrigin(origin[0], origin[1], "City Center");
+                        }
+                        // Auto-load for predefined cities
+                        btn.click();
+                    }
+                }
+            });
 
             btn.addEventListener('click', async () => {
-                const bounds = map.getBounds();
+                const cityKey = citySelect.value;
+                const city = CITIES[cityKey];
 
                 try {
                     loading.classList.remove('hidden');
+                    countLabel.classList.add('hidden');
 
-                    // 1. Fetch Data
-                    const count = await transitFetcher.fetchRoutes(bounds);
+                    let count = 0;
+                    if (city && city.file) {
+                        // Load Static Graph
+                        count = await transitFetcher.loadStaticGraph(city.file);
+                    } else {
+                        // Load Dynamic (Overpass)
+                        const bounds = map.getBounds();
+                        count = await transitFetcher.fetchRoutes(bounds);
+                    }
 
-                    // 2. Generate Transfers
-                    transitGraph.generateTransferEdges(200); // 200m threshold
+                    // 2. Generate Transfers (still needed for walking connections between lines)
+                    transitGraph.generateTransferEdges(200);
 
-                    countLabel.innerText = `Loaded ${count} stations`;
+                    countLabel.innerText = `Loaded ${count} stations for ${cityKey.toUpperCase()}`;
                     countLabel.classList.remove('hidden');
 
-                    // 3. Recalculate Times for current origin
+                    // 3. Recalculate Times
                     if (window.updateOrigin) {
-                        // Trigger calculation by "moving" to current origin
                         window.updateOrigin(origin[0], origin[1]);
                     }
 
                 } catch (err) {
-                    alert("Failed to load transit data: " + err.message);
+                    console.error(err);
+                    alert(`Failed to load data for ${cityKey}. Make sure generate_city_data.py has been run.\nError: ${err.message}`);
                 } finally {
                     loading.classList.add('hidden');
                 }
